--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,11 @@
 name: 'Build Test'
 description: 'Tests the build process of the MC'
 
+on:
+  push:
+    branches:
+      - '**'
+
 jobs:
   bundle-test:
     runs-on: <docker_img>
